Editor integration and tidy up

--- a/cadet_HungryHero/.project
+++ b/cadet_HungryHero/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Cadet_HungryHero</name>
+	<name>C2D_HungryHero</name>
 	<comment></comment>
 	<projects>
 	</projects>
